k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: lms-backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: lms-backend

  template:
    metadata:
      labels:
        app: lms-backend

    spec:
      containers:
        - name: backend
          image: lms-backend:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5000
