k8s/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mysql

spec:
  serviceName: mysql
  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      containers:
        - name: mysql
          image: mysql:8.4

          ports:
            - containerPort: 3306

          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql

            - name: mysql-init
              mountPath: /docker-entrypoint-initdb.d

      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc

        - name: mysql-init
          configMap:
            name: mysql-init
