k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: lms-backend

spec:
  type: NodePort

  selector:
    app: lms-backend

  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30080
