k8s/lms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: lms-ingress

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lms-backend
                port:
                  number: 5000
